--- a/.github /workflows/ci.yaml
+++ b/.github /workflows/ci.yaml
@@ -6,13 +6,17 @@ on:
   pull_request:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: server
+
 jobs:
   client-linter:
     name: lint
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./client
+        working-directory: client
 
     steps:
       - uses: actions/checkout@v4
@@ -31,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./client
+        working-directory: client
 
     steps:
       - uses: actions/checkout@v4
@@ -52,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./server
+        working-directory: server
 
     steps:
       - uses: actions/checkout@v4
@@ -71,7 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./server
+        working-directory: server
 
     steps:
       - uses: actions/checkout@v4
