--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -8,14 +8,10 @@ on:
 permissions:
   contents: read
 
-defaults:
-  run:
-    working-directory: server
-
 jobs:
 
   client-golangci:
-    name: lint
+    name: client
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -28,10 +24,12 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
+          working-directory: client
+          args: --config=/server/.golangci.yml
           version: latest
 
   server-golangci:
-    name: lint
+    name: server
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -41,4 +39,6 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
+          working-directory: server
+          args: --config=/server/.golangci.yml
           version: latest
