--- a/server/Makefile
+++ b/server/Makefile
@@ -3,7 +3,7 @@ export PATH := $(PWD)/bin:$(PATH)
 export GOFLAGS := -mod=mod
 
 lint:
-	golangci-lint run --fix --config ./.golangci.yml ./...
+	golangci-lint run --config ./.golangci.yml ./...
 
 mock: mock
 	find ./internal -type d -name "*mock*" | xargs rm -dfR
